# Attention

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: base.yaml
scripts/: __init__.py  check_env.py  create_datasets.py  download_data.py  example_training.py  test_training.py  train_tokenizer.py
src/attention_research/: __init__.py
src/attention_research/data/: __init__.py  datasets.py  tokenizer.py  utils.py
src/attention_research/models/: __init__.py
src/attention_research/models/jax/: __init__.py  attention.py
src/attention_research/models/torch/: __init__.py  attention.py
src/attention_research/shared/: __init__.py  config.py
src/attention_research/training/: __init__.py  jax_trainer.py  torch_trainer.py
tests/unit/: test_datasets.py  test_jax_attention.py  test_tokenizer.py  test_torch_attention.py  test_utils.py
